// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно логирует событие показа 1`] = `
Object {
  "event": "VAS_SHOW",
  "price": 1000,
  "serviceId": "wallet_user",
}
`;

exports[`правильно рисует компонент 1`] = `
<div
  className="MyWalletBalance MyWallet__section"
>
  <Svg
    className="MyWallet__sectionIcon"
    src="svgID"
  />
  <div
    className="MyWallet__sectionLabel"
  >
    <span>
      Баланс кошелька
    </span>
    <Price
      className="MyWalletBalance__balance"
      currency="RUR"
      free="0 ₽"
      price={777}
      separator=" "
    />
  </div>
  <TextInputInteger
    className="MyWalletBalance__topUpAmount"
    name="wallet_balance"
    onChange={[Function]}
    size="l"
    value={1000}
    valueBlurSuffix="₽"
  />
  <Button
    color="blue"
    disabled={false}
    onClick={[Function]}
    size="l"
    type="button"
    width="default"
  >
    Пополнить
  </Button>
</div>
`;

exports[`при клике на кнопку пополнения баланса залогирует событие клика 1`] = `
Object {
  "event": "VAS_CLICK",
  "price": 1000,
  "serviceId": "wallet_user",
}
`;

exports[`при клике на кнопку пополнения баланса откроет окно оплаты с правильными параметрами 1`] = `
Object {
  "from": "desktop-wallet",
  "product": Array [
    Object {
      "count": 1000,
      "name": "wallet_user",
    },
  ],
  "successText": "Кошелёк пополнен успешно",
}
`;
